fix duplicated resource